--- a/src/styles/why-play.css
+++ b/src/styles/why-play.css
@@ -152,15 +152,21 @@
         .right-container {
             position: absolute;
             top: 45%;
-            right: 150px;
-            width: 50%;
-            justify-content: center;
+            right: 10%;
+            width: 80%;
+            margin-right: 1px;
+            
+                
+              
+                
+            
+            
             
         }
 
         .title-container {
             position: absolute;
-            top: 2%; 
+            top: 3%; 
             margin-left: 30%;
             left: 50px; 
              
