--- a/src/styles/why-play.css
+++ b/src/styles/why-play.css
@@ -142,6 +142,8 @@
         display: none;
     }
     
+
+    /*torna a sessao responsiva */
     @media (max-width: 720px) {
         .section-container-why-play {
             margin-top: 1px;
@@ -155,12 +157,6 @@
             right: 10%;
             width: 80%;
             margin-right: 1px;
-            
-                
-              
-                
-            
-            
             
         }
 
